--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jasmijn Baaijens"
-  avatar           : "profile.png"
+  avatar           : "images/jasmijn_lowres.jpg"
   bio              : "Assistant professor at TU Delft and visiting researcher at Harvard Medical School"
   location         : "Delft, Netherlands"
   employer         :
